2nd class API updated

--- a/class-2.html
+++ b/class-2.html
@@ -17,6 +17,13 @@
     <button onclick="loadKanye()">Kanye Load</button>
     <blockquote id="quote"></blockquote>
 
+    <!-- Random user API Practice -->
+    <h2>Random user API practyice</h2>
+
+    <div id="user">
+
+    </div>
+
 
 </body>
 <script src="class-2.js"></script>
