1st and 2nd class API updated

--- a/class-2.html
+++ b/class-2.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class-43-API</title>
+    <link rel="stylesheet" href="class-2.css">
 </head>
 
 <body>
@@ -23,6 +24,26 @@
     <div id="user">
 
     </div>
+
+
+    <!-- World Countries Tour for Practice API -->
+
+    <section class="">
+        <div id="country-details">
+
+        </div>
+    </section>
+
+    <h1>World Countries Tour for Practice API</h1>
+
+    <h1>Select the Country</h1>
+
+    <div id="country-list">
+
+    </div>
+
+
+
 
 
 </body>
